--- a/src/results.html
+++ b/src/results.html
@@ -1,31 +1,49 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Earthquake Results</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
-    <h1>Earthquake Results</h1>
-    <table>
-        <tr>
-            <th>Time</th>
-            <th>Latitude</th>
-            <th>Longitude</th>
-            <th>Depth</th>
-            <th>Magnitude</th>
-            <th>Place</th>
-        </tr>
-        {% for earthquake in earthquakes %}
-        <tr>
-            <td>{{ earthquake.time }}</td>
-            <td>{{ earthquake.latitude }}</td>
-            <td>{{ earthquake.longitude }}</td>
-            <td>{{ earthquake.depth }}</td>
-            <td>{{ earthquake.mag }}</td>
-            <td>{{ earthquake.place }}</td>
-        </tr>
-        {% endfor %}
-    </table>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-</body>
-</html>
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    background-color: #4CAF50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+form {
+    margin: 20px;
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+}
+
+input[type="text"], input[type="submit"], .form-control {
+    padding: 10px;
+    margin-top: 5px;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+input[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+.table {
+    margin: 20px 0;
+}
+
+.card {
+    margin-bottom: 20px;
+}
